# amical

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build-macos-x64.yml  build-windows-x64.yml  dev-build.yml  release.yml  windows-build-test.yml
apps/desktop/: drizzle.config.ts  forge.config.ts  index.html  onboarding.html  package.json  vite.onboarding.config.mts  vite.renderer.config.mts  vite.widget.config.mts  widget.html
apps/desktop/assets/: logo.icns
apps/desktop/src/components/: auth-button.tsx  nav-main.tsx  shortcut-input.tsx  site-header.tsx  theme-provider.tsx  theme-toggle.tsx  update-dialog.tsx
apps/desktop/src/constants/: languages.ts  models.ts
apps/desktop/src/db/: app-settings.ts  index.ts  schema.ts
apps/desktop/src/main/: logger.ts  main.ts  preload.ts
apps/desktop/src/services/: auth-service.ts  installed-apps-service.ts  model-service.ts  onboarding-service.ts  settings-service.ts  telemetry-service.ts  transcription-service.ts  vad-service.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/trpc/: router.ts
apps/desktop/src/types/: electron-api.ts  (+2 more)
apps/desktop/tests/: README.md
apps/tauri-desktop/: .env.example  drizzle.config.ts  forge.config.ts  index.html  package.json  tsconfig.json
apps/tauri-desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/tauri-desktop/src-tauri/assets/: available-models.json
apps/tauri-desktop/src-tauri/capabilities/: default.json
apps/tauri-desktop/src-tauri/src/: main.rs
docs/bugfixes/: intel-macos-whisper-worker.md  windows-whisper-gpu.md
(+131 files in other folders)
